# grib-cpp

./: .clang-format  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
cmake/: BuildEccodes.cmake  gribConfig.cmake.in
examples/: CMakeLists.txt  example_ecmwf_index.cpp  example_nomads_idx.cpp
include/grib/: error.hpp  extract.hpp  grib.hpp  handle.hpp  http_client.hpp  rate_limit.hpp  retry.hpp  sidecar.hpp
src/: CMakeLists.txt
src/api/: extract.cpp
src/core/: error.cpp  rate_limit.cpp  retry.cpp
src/decode/: handle.cpp
src/http/: client.cpp
src/models/: sidecar.cpp
tests/: CMakeLists.txt  handle_test.cpp  sidecar_test.cpp
tests/fixtures/: sample_2t.grib2
